--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -76,8 +76,8 @@ select.success: <prefix>Successfully selected storage network <green><1>
 invalidnetwork: <prefix><1> <red>is not a valid network!
 
 permission.server: <prefix><red>This command is only available for server administrators!
-permission.owner: <prefix><red>You don't have permissions to edit this network!\nYou need to be the network owner or a server administrator!
-permission.user: <prefix><red>You don't have permissions on this network!\nYou need to be a network user!
+permission.owner: "<prefix><red>You don't have permissions to edit this network!\nYou need to be the network owner or a server administrator!"
+permission.user: "<prefix><red>You don't have permissions on this network!\nYou need to be a network user!"
 
 list.empty: <prefix>You don't have any storage networks!
 list: "<prefix>You are added the following storage networks:"
