--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -151,6 +151,9 @@ item.name.wand1: <reset><red>Netzwerk Konfigurator <blue>[Priorität]
 item.name.component.input: <reset>Einfüllkiste
 item.name.component.sorting: <reset>Sortierkiste
 item.name.component.misc: <reset>Restekiste
+item.name.component.input.upgrade: <reset>Upgrade zur Einfüllkiste
+item.name.component.sorting.upgrade: <reset>Upgrade zur Sortierkiste
+item.name.component.misc.upgrade: <reset>Upgrade zur Restekiste
 item.name.upgrade.range.0: <reset><bold>Telemetrie Antenne Mk.1
 item.name.upgrade.range.1: <reset><bold>Telemetrie Antenne Mk.2
 item.name.upgrade.range.2: <reset><bold>Telemetrie Antenne Mk.3
@@ -180,6 +183,18 @@ item.lore.component.sorting:
   - ""
   - "<reset>Filter Items:"
 item.lore.component.misc:
+  - "<reset><blue>Alle übrigen items gehen in diese Kisten"
+
+item.lore.component.input.upgrade:
+  - "<reset><blue>Auf eine Kiste klicken um das Upgrade zu installieren"
+  - "<reset><blue>Sortiert eingelegte Items in Sortier- und Restekisten ein"
+item.lore.component.sorting.upgrade:
+  - "<reset><blue>Auf eine Kiste klicken um das Upgrade zu installieren"
+  - "<reset><blue>Akzeptiert nur Items, die dem Filter der Kiste entsprechen"
+  - ""
+  - "<reset>Filter Items:"
+item.lore.component.misc.upgrade:
+  - "<reset><blue>Auf eine Kiste klicken um das Upgrade zu installieren"
   - "<reset><blue>Alle übrigen items gehen in diese Kisten"
 
 item.lore.upgrade.range:
