--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -102,6 +102,10 @@ info.components.input: "Einfüllkisten: "
 info.components.sorting: "Sortierkisten: "
 info.components.misc: "Restekisten: "
 
+property.range: "<reset><green>Reichweite</green>"
+property.acceptor_priority: "<reset><green>Annahme-Priorität</green>"
+property.supplier_priority: "<reset><green>Abgabe-Priorität</green>"
+property.filters: "<reset><green>Filter</green>"
 
 component.input.add: <prefix>Einfüllkiste bei <1> wurde hinzugefügt zum Netzwerk <2>!
 component.sorting.add: <prefix>Sortierkiste bei <1> wurde hinzugefügt zum Netzwerk <2>!
@@ -184,8 +188,6 @@ item.lore.component.input:
   - "<reset><blue>Sortiert eingelegte Items in Sortier- und Restekisten ein"
 item.lore.component.sorting:
   - "<reset><blue>Akzeptiert nur Items, die dem Filter der Kiste entsprechen"
-  - ""
-  - "<reset>Filter Items:"
 item.lore.component.misc:
   - "<reset><blue>Alle übrigen items gehen in diese Kisten"
 
@@ -195,8 +197,6 @@ item.lore.component.input.upgrade:
 item.lore.component.sorting.upgrade:
   - "<reset><blue>Auf eine Kiste klicken um das Upgrade zu installieren"
   - "<reset><blue>Akzeptiert nur Items, die dem Filter der Kiste entsprechen"
-  - ""
-  - "<reset>Filter Items:"
 item.lore.component.misc.upgrade:
   - "<reset><blue>Auf eine Kiste klicken um das Upgrade zu installieren"
   - "<reset><blue>Alle übrigen items gehen in diese Kisten"
