--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -103,6 +103,10 @@ info.components.input: "Input Containers: "
 info.components.sorting: "Sorting Containers: "
 info.components.misc: "Miscellaneous Containers: "
 
+property.range: "<reset><green>Range</green>"
+property.acceptor_priority: "<reset><green>Acceptor Priority</green>"
+property.supplier_priority: "<reset><green>Supplier Priority</green>"
+property.filters: "<reset><green>Filters</green>"
 
 component.input.add: <prefix>Input container at <1> successfully added to <2>!
 component.sorting.add: <prefix>Sorting container at <1> successfully added to <2>!
@@ -186,8 +190,6 @@ item.lore.component.input:
   - "<reset><blue>Sorts items into sorting containers and misc containers"
 item.lore.component.sorting:
   - "<reset><blue>Only accepts items that match the filter of this container"
-  - ""
-  - "<reset>Filter Items:"
 item.lore.component.misc:
   - "<reset><blue>All remaining items will go into these"
 
@@ -197,8 +199,6 @@ item.lore.component.input.upgrade:
 item.lore.component.sorting.upgrade:
   - "<reset><blue>Right click on a chest to make it a sorting container"
   - "<reset><blue>Only accepts items that match the filter of this container"
-  - ""
-  - "<reset>Filter Items:"
 item.lore.component.misc.upgrade:
   - "<reset><blue>Right click on a chest to make it a misc container"
   - "<reset><blue>All remaining items will go into these"
