--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -75,7 +75,7 @@ delete.confirm: <prefix>Bist du dir sicher, dass du Netzwerk <1> löschen möcht
 select.noselection: <prefix><red>Kein Netzwerk wurde ausgewählt, bitte wähle ein Netzwerk aus mit <white>/net select <network>
 select.success: <prefix>Netzwerk <green><1><white> wurde ausgewählt.
 
-invalidnetwork: <prefix><red>Es gibt kein Netzwerk mit dem Namen <white><1>
+invalidnetwork: Es gibt kein Netzwerk mit dem Namen <input>
 
 permission.server: <prefix><red>Dieser Befehl ist nur für Server Administratoren verfügbar!
 permission.owner: "<prefix><red>Du hast keine Berechtigung, dieses Netzwerk zu bearbeiten!\nDu musst Netzwerkbesitzer oder Server Administrator sein!"
