--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -161,14 +161,11 @@ item.name.wand1: <reset><red>Netzwerk Konfigurator <blue>[Priorität]
 item.name.component.input: <reset>Einfüllkiste
 item.name.component.sorting: <reset>Sortierkiste
 item.name.component.misc: <reset>Restekiste
-item.name.component.input.upgrade: <reset>Upgrade zur Einfüllkiste
-item.name.component.sorting.upgrade: <reset>Upgrade zur Sortierkiste
-item.name.component.misc.upgrade: <reset>Upgrade zur Restekiste
-item.name.upgrade.range.0: <reset><bold>Telemetrie Antenne Mk.1
-item.name.upgrade.range.1: <reset><bold>Telemetrie Antenne Mk.2
-item.name.upgrade.range.2: <reset><bold>Telemetrie Antenne Mk.3
-item.name.upgrade.range.3: <reset><bold>Telemetrie Antenne Mk.4
-item.name.upgrade.range.4: <reset><bold>Telemetrie Antenne Mk.5
+item.name.upgrade.range.0: <reset><bold>Antenne Mk.1
+item.name.upgrade.range.1: <reset><bold>Antenne Mk.2
+item.name.upgrade.range.2: <reset><bold>Antenne Mk.3
+item.name.upgrade.range.3: <reset><bold>Antenne Mk.4
+item.name.upgrade.range.4: <reset><bold>Antenne Mk.5
 # Add more here if you want to add more tiers of upgrades
 
 
