Renamed all occurrences of NanoFlux to Kwantux

--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -1,6 +1,6 @@
 prefix: "<green>[Networks]<reset>  "
 
-version: "<dark_green>Networks Plugin</dark_green> von <yellow>NanoFlux</yellow>\n<aqua>Version: </aqua><1>"
+version: "<dark_green>Networks Plugin</dark_green> von <yellow>Kwantux</yellow>\n<aqua>Version: </aqua><1>"
 
 help: "\n
 <bold><dark_green>          Networks v<1> - Help Menu
