--- a/src/main/resources/lang/de.yml
+++ b/src/main/resources/lang/de.yml
@@ -119,6 +119,7 @@ component.exploded: <prefix><dark_red>Komponent bei <white><1><dark_red> aus dem
 component.invalid_block: <prefix><red>Blöcke vom Typ </red><1><red> können keine Netzwerkkomponenten sein!</red>
 component.nocomponent: <prefix><yellow>Dies ist kein Netzwerkkomponent!
 component.priority: <prefix>Priorität wurde auf <1> gesetzt,
+component.list.empty: <prefix><red>Netzwerk <white><1></white> hat keine Komponenten!
 
 location.occupied: <prefix><red>There is already a component at this location!
 
