--- a/src/main/resources/lang/en.yml
+++ b/src/main/resources/lang/en.yml
@@ -128,7 +128,7 @@ rangeupgrade.last: <prefix><yellow>You already reached the maximum upgrade level
 rangeupgrade.alreadyupgraded: <prefix><yellow>You already installed this upgrade, the next upgrade is range Tier <white><1>
 rangeupgrade.unlockfirst: <prefix><yellow>You need to unlock range Tier <white><1><yellow> first!
 rangeupgrade.passivecomponent: <prefix><yellow>This can only be applied to <bold>active</bold> network components (e.g. Input), NOT passive components (e.g. Sorting, Misc)
-rangeupgrade.success: <prefix>Successfully upgraded network <2> to Tier <1>!
+rangeupgrade.success: <prefix>Successfully upgraded component <2> to Tier <1>!
 
 user.add: <prefix>Successfully added <2> to the network <1>
 user.remove: <prefix>Successfully removed <2> from the network <1>
